<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".thirdsample.ui.profile.ProfileActivity">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="32dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cardView"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorPrimaryDark"
                >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    />

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/colorPrimary"
                    android:hint="@string/name"
                    >

                <EditText
                        android:id="@+id/mEtName"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:textColorHint="@android:color/white"
                        android:textColor="@android:color/white"
                        android:layout_height="match_parent"
                        />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimary"
                    android:hint="@string/age"
                    >

                <EditText
                        android:id="@+id/mEtAge"
                        android:inputType="number"
                        android:textColorHint="@android:color/white"
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
            </android.support.design.widget.TextInputLayout>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_margin="16dp"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:onClick="updateClick"
                    android:textColor="@android:color/white"
                    />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
            android:text="@string/log_out"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            tools:layout_editor_absoluteY="392dp"
            tools:layout_editor_absoluteX="176dp"
            android:id="@+id/tvLogOut"
            android:onClick="logOutClick"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            />

    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="380dp"
            tools:layout_editor_absoluteX="161dp"
            android:id="@+id/button4"
            android:onClick="nextActivity"
            app:layout_constraintTop_toBottomOf="@+id/tvLogOut"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_background"
            android:textColor="@android:color/white"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            />


</android.support.constraint.ConstraintLayout>