<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".thirdsample.ui.login.LoginActivity">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/email">
                <EditText
                        android:id="@+id/mEtName"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/password">
                <EditText
                        android:id="@+id/mEtAge"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
            </android.support.design.widget.TextInputLayout>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_margin="16dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:onClick="loginClick"
                    android:textColor="@android:color/white"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>